data/derived/fa15/progs/unify/prog1133.ml.out
Characters 156-173:
  |Average (i1,i2) -> ((exprToString i1) + (exprToString i2))/2;;
                       ^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         int
